<resources>
    <string name="app_name">SulejowekAirCheck</string>
    <string name="action_settings">Settings</string>
    <string name="menu_about">Air Index Scale</string>
    <string name="placeholder_no_data_to_display">...</string>
    <string name="appbarlayout">AppBarLayout</string>
    <string name="main_app_layout">Main App layout</string>
    <string name="floating_action_button">Floating action button</string>
    <string name="toolbar_section">Toolbar section</string>
    <string name="recycler_view">Recycler View</string>
    <string name="map_main_layout">Map main layout</string>
    <string name="map_fragment">Map Fragment</string>
    <string name="sensor">sensor</string>
    <string name="sensor_pm2_5_percent">Sensor PM2.5 percent</string>
    <string name="sensor_pm2_5_value">Sensor PM2.5 value</string>
    <string name="sensor_air_progressbar">Sensor Air progressbar</string>
    <string name="sensor_name_place">Sensor name place</string>
    <string name="air_index_scale_source">http://www.sparetheair.com/assets/aqi/PM2017.png</string>

    <string name="appwidget_text">Sulejowek town center</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="sulejowek_air_check">PM25 value:</string>
</resources>
