<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/sensor_item_bg"
    android:contentDescription="@string/main_app_layout"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView_sensorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/sensor_name_place"
        android:text="@string/sensor" />

    <LinearLayout
        android:id="@+id/layout_progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/sensor_air_progressbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView_pm25value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:contentDescription="@string/sensor_pm2_5_value"
                android:text="@string/placeholder_no_data_to_display" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_percentageValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sensor_pm2_5_percent"
                android:text="@string/placeholder_no_data_to_display" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>